# poseidon_anpassungs_katalog

./: .env.example  .gitignore  measures_seed.json  pyproject.toml  readme.md
config/: settings.py  urls.py
deploy/: README.md  nginx-poseidon.conf  poseidon.service
locale/da/LC_MESSAGES/: django.mo  django.po
locale/de/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
measures/: admin.py  models.py  translation.py  urls.py  views.py
measures/management/commands/: import_measures.py  import_poseidon.py
measures/migrations/: 0001_initial.py  0002_measure_description_da_measure_description_de_and_more.py  0003_alter_tag_options_tag_category_alter_measure_summary_and_more.py  0004_remove_measure_description_en_and_more.py
measures/static/measures/: catalogue.css  catalogue.js
measures/templates/measures/: base.html  map.html  measure_detail.html
