[project]
name = "poseidon-anpassungs-katalog"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-modeltranslation>=0.20.3",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
